# ethercat_charger

./: .clangd  .gitignore  README.md  hpm_sdk_import.cmake
boards/hpm5e31_LuckyCAT/: CMakeLists.txt  board.c  board.h  hpm5e31_LuckyCAT.yaml  pinmux.c
bootuser/: CMakeLists.txt
bootuser/src/: boot_user.c
common/: ecat_sources.cmake  hpm_flashmap.h  ota_config.h
common/charger/: charger_app.c
common/ecat/: README_en.md  README_zh.md  ecat_foe.c  ecat_slave.c  ecat_slave.h
common/ecat/SSC/: ethercat_charger.esp  ethercat_charger.xml  foe.esp  foe.xml  foe_charger.xlsx
common/ecat/SSC/Config/: HPM_ECAT_CHARGER_Config.xml
common/ecat/SSC/Src/: coeappl.c  ecat_def.h  ecatappl.c  ecatslv.c  eeprom.h  ethercat_charger.c  ethercat_chargerObjects.h  ethercat_charger_objects.c  foe_charger.c  foe_charger.h  foe_chargerObjects.h
tools/: build.ps1  flash_openocd.ps1  pack_ota.ps1  update_compile_commands.ps1
user_app/: CMakeLists.txt  ecat_sources.cmake
user_app/charger/: charger_app.c  charger_app.h
user_app/ecat/: README_en.md  README_zh.md  ecat_foe_support.c  ecat_slave.c
user_app/ecat/SSC/: ethercat_charger.esp  ethercat_charger.xlsx  ethercat_charger.xml
user_app/ecat/SSC/Src/: applInterface.h  coeappl.c  ecat_def.h  ecatappl.c  eeprom.h  ethercat_charger.c  ethercat_charger.h  ethercat_chargerObjects.h  ethercat_charger_objects.h  ethercat_charger_objectsObjects.h
user_app/inc/: FreeRTOSConfig.h
user_app/log/: app_log.c  app_log.h
user_app/modbus/: modbus_master_app.c  modbus_master_app.h
user_app/oled/: oled.c  oled.h
user_app/shell/: shell_commands.c
user_app/src/: main.c
